# D3PP

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CleanLua.rb  CppProperties.json  D3 Classic.pbp  D3PP.cbp  D3PP.depend  D3PP.layout  Dockerfile  Headers.pbi  Makefile  Minecraft-Server.pb  README.md  appicon.rc  cmake_install.cmake  files.json  main.cpp
.github/workflows/: build.yml
Includes/: CPE.pbi  Map.pbi  Map_Overview.pbi  Network.pbi  Network_Functions.pbi
Logs/: Log_0.txt  Log_1.txt
Network/: NetworkClientInput.pbi  NetworkClientOutput.pbi
Plugins/Heartbeat/: Heartbeat.pb  Heartbeat.x64.exp  Heartbeat.x64.lib  Heartbeat.x86.exp  Heartbeat.x86.lib
Plugins/Include/: Include.pbi
Plugins/Lua/: Lua.pb  lua.x64.exp  lua.x64.lib  lua.x86.exp  lua.x86.lib
Plugins/Lua/Include/: Lua.pbi
TestFolder/badBlocks/: Config.txt
Testing/: Client_test.cc  hello_test.cc  utils_test.cc
Testing/common/: ByteBufferTest.cc  MinecraftLocationTest.cc
Testing/files/: ClassicWorldTest.cc  d3map_test.cc
Testing/nbt/: nbt_test.cc
Testing/network/: chat_tests.cc
Testing/world/: IUniqueQueueTest.cc  PhysicsQueueTest.cc  entity_test.cc  mapactions_test.cc
docker/ubuntu/: Dockerfile  run_cmake.sh  run_compile.sh
docs/: Deploying with Docker.md  REST API.md  building.ipynb
docs/Lua API/: Block.md  Build.md  BuildMode.md  CPE.md  Client.md  Entity.md  Map.md  Network.md  Player.md  README.md  Rank.md  System.md  Teleporter.md
include/: Block.h  Build.h  BuildMode.h  CPE.h  Chat.h  Client.h  Command.h  ConsoleClient.h  CustomBlocks.h  Entity.h  EventSystem.h  Files.h  Heartbeat.h  Logger.h  Map.h  Mem.h  MinecraftLocation.h  Network.h  NetworkClient.h  Network_Functions.h  PacketHandlers.h  Packets.h  Physics.h  Player.h  Player_List.h  Rank.h  System.h  TaskScheduler.h  Teleporter.h  Undo.h  Utils.cpp  Utils.h  ZLib.h  compression.h  mingw.invoke.h  mingw.mutex.h  mingw.thread.h  watchdog.h
include/Nbt/: cppNbt.h
include/common/: ByteBuffer.h  Configuration.h  D3PPMetadata.h  Files.h  Logger.h  MinecraftLocation.h  Player_List.h  PreferenceLoader.h  TaskScheduler.h  UndoItem.h  Vectors.h
include/events/: EntityEventArgs.h  EventChatAll.h  EventChatMap.h  EventChatPrivate.h  EventClientAdd.h  EventClientDelete.h  EventClientLogin.h  EventClientLogout.h  EventEntityAdd.h  EventEntityDelete.h  EventEntityDie.h  EventEntityMapChange.h  EventEntityPositionSet.h  EventMapActionDelete.h  EventMapActionFill.h  EventMapActionLoad.h  EventMapActionResize.h  EventMapActionSave.h  EventMapAdd.h  EventMapBlockChange.h  EventMapBlockChangeClient.h  EventMapBlockChangePlayer.h  EventTimer.h  PlayerEventArgs.h
include/files/: ClassicWorld.h  D3Map.h  MapConfig.h
include/generation/: flatgrass.cpp
include/gui/: backend.h  console.h  maps.h  playerdb.h
include/lua/: block.h  build.h  buildmode.h  client.h  cpe.h  entity.h  map.h  network.h  player.h  rank.h  system.h  teleporter.h
include/network/: Chat.h  CustomParticle.h  IPacket.h  LinuxServerSockets.h  LinuxSockets.h  Network.h  NetworkClient.h  Network_Functions.h  PacketHandlers.h  Packets.h  Server.h  WindowsServerSockets.h  WindowsSockets.h  httplib.h
include/network/packets/: BlockChangePacket.h  ChatPacket.h  CustomBlockSupportLevelPacket.h  DefineEffectPacket.h  ExtEntryPacket.h  ExtInfoPacket.h  ExtRemovePlayerName.h  HandshakePacket.h  PingPacket.h  (+10 more)
include/plugins/: Cplugin.h  Heartbeat.h  LuaPlugin.h  LuaState.h  PluginManager.h  RestApi.h
include/world/: BlockChangeQueue.h  BlockQueue.h  ChangeQueueItem.h  ClassicWorldMapProvider.h  CustomParticle.h  D3MapProvider.h  Entity.h  FillState.h  IMapProvider.h  IMinecraftPlayer.h  IUniqueQueue.h  Map.h  MapActions.h  MapEnvironment.h  MapIntensiveActions.h  MapMain.h  MapPermissions.h  Physics.h  PhysicsQueue.h  Player.h  Teleporter.h  TimeQueueItem.h
src/: Block.cpp  Build.cpp  BuildMode.cpp  CPE.cpp  Chat.cpp  Client.cpp  Command.cpp  ConsoleClient.cpp  CustomBlocks.cpp  CustomParticle.cpp  Entity.cpp  EventSystem.cpp  Files.cpp  Heartbeat.cpp  Logger.cpp  Map.cpp  Mem.cpp  MinecraftLocation.cpp  Network.cpp  NetworkClient.cpp  NetworkClientInput.cpp  NetworkClientOutput.cpp  Network_Functions.cpp  PacketHandlers.cpp  Packets.cpp  Physics.cpp  Player.cpp  Player_List.cpp  Rank.cpp  Root.cpp  Root.h  System.cpp  TaskScheduler.cpp  Teleporter.cpp  Undo.cpp  Utils.cpp  ZLib.cpp  compression.cpp  watchdog.cpp
src/Nbt/: cppNbt.h
src/common/: ByteBuffer.cpp  Configuration.cpp  D3PPMetadata.cpp  Files.cpp  Logger.cpp  MinecraftLocation.cpp  Player_List.cpp  PreferenceLoader.cpp  TaskScheduler.cpp  compression.cpp
src/events/: EntityEventArgs.cpp  EventChatAll.cpp  EventChatMap.cpp  EventChatPrivate.cpp  EventClientAdd.cpp  EventClientDelete.cpp  EventClientLogin.cpp  EventClientLogout.cpp  EventEntityAdd.cpp  EventEntityDelete.cpp  EventEntityDie.cpp  EventEntityMapChange.cpp  EventEntityPositionSet.cpp  EventMapActionDelete.cpp  EventMapActionFill.cpp  EventMapActionLoad.cpp  EventMapActionResize.cpp  EventMapActionSave.cpp  EventMapAdd.cpp  EventMapBlockChange.cpp  EventMapBlockChangeClient.cpp  EventMapBlockChangePlayer.cpp  EventTimer.cpp  PlayerEventArgs.cpp
src/files/: ClassicWorld.cpp  D3Map.cpp
src/generation/: flatgrass.cpp
src/gui/: backend.cpp  console.cpp  maps.cpp  playerdb.cpp
src/lua/: block.cpp  build.cpp  buildmode.cpp  client.cpp  cpe.cpp  entity.cpp  map.cpp  network.cpp  player.cpp  rank.cpp  system.cpp  teleporter.cpp
src/network/: Chat.cpp  LinuxServerSockets.cpp  LinuxSockets.cpp  Network.cpp  NetworkClient.cpp  Network_Functions.cpp  PacketHandlers.cpp  Packets.cpp  Server.cpp  WindowsServerSockets.cpp  WindowsSockets.cpp
src/plugins/: Cplugin.cpp  Heartbeat.cpp  LuaPlugin.cpp  LuaState.cpp  PluginManager.cpp  RestApi.cpp
src/world/: BlockChangeQueue.cpp  BlockQueue.cpp  ClassicWorldMapProvider.cpp  D3MapProvider.cpp  Entity.cpp  IMapProvider.cpp  IUniqueQueue.cpp  Map.cpp  MapActions.cpp  MapIntensiveActions.cpp  MapMain.cpp  Physics.cpp  PhysicsQueue.cpp  Player.cpp  Teleporter.cpp
(+12 files in other folders)
